--- a/contact-form.css
+++ b/contact-form.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary: aqua;
+}
+
 body {
-    background: #1f1f1f;
+    background: #000;
     font-family: "Poppins", sans-serif;
     color: #fff;
 }
@@ -27,10 +31,12 @@ body {
 }
 
 .contact-form {
-    background: rgba(255, 255, 255, 0.05);
+    border-top: 2px solid var(--primary);
+    border-bottom: 2px solid var(--primary);
+    background: #110f0f;
     padding: 2rem;
     border-radius: 12px;
-    box-shadow: 0 4px 25px rgba(0, 0, 0, 0.4);
+    /* box-shadow: 0 0 35px rgba(0, 255, 255, 0.2); */
     width: 100%;
     max-width: 500px;
     display: flex;
@@ -43,10 +49,19 @@ body {
     padding: 15px;
     border: none;
     border-radius: 8px;
-    font-size: 1rem;
+    font-size: 0.85rem;
     outline: none;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    background: #444;
+    color: white;
+}
+
+/* Highlighting the fields when selected */
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+    border: 2px solid var(--primary);
 }
 
 /* Responsive tweak: 
@@ -65,7 +80,7 @@ The textarea should adapt to screen size gracefully */
     font-size: 1rem;
     font-weight: bold;
     background: rgb(37, 168, 168);
-    color: white;
+    color: #222;
     cursor: pointer;
     transition: filter 0.3s ease;
     transition: transform 0.3s ease;
@@ -75,7 +90,7 @@ The textarea should adapt to screen size gracefully */
 
 .btn:hover {
     animation: hueShift 4s linear infinite;
-    transform: translateY(-1.5px);
+    transform: translateY(-2px);
 }
 
 @keyframes hueShift {
@@ -103,4 +118,19 @@ Ensuring perfect alignment and spacing on smaller screens */
     .contact h2 {
         font-size: 1.6rem;
     }
+}
+
+/* Designs for the validation msgs */
+
+.form-status {
+    margin-top: 1rem;
+    font-weight: 600;
+}
+
+.success {
+    color: var(--primary);
+}
+
+.error {
+    color: red;
 }
